--- a/pom.xml
+++ b/pom.xml
@@ -30,9 +30,9 @@
             <version>4.4.6</version>
         </dependency>
         <dependency>
-            <groupId>org.apache.httpcomponents</groupId>
+            <groupId>org.apache.http</groupId>
             <artifactId>httpclient</artifactId>
-            <version>4.5.6</version>
+            <version>4.2.5</version>
         </dependency>
     </dependencies>
 
