--- a/pom.xml
+++ b/pom.xml
@@ -12,21 +12,18 @@
     <profiles>
         <profile>
             <id>alpha</id>
-            <!-- alpha环境 -->
             <properties>
                 <profiles.active>alpha</profiles.active>
             </properties>
         </profile>
         <profile>
             <id>ar</id>
-            <!-- ar环境 -->
             <properties>
                 <profiles.active>ar</profiles.active>
             </properties>
         </profile>
         <profile>
             <id>prod</id>
-            <!-- 生产环境：默认 -->
             <properties>
                 <profiles.active>prod</profiles.active>
             </properties>
@@ -44,6 +41,7 @@
                 <includes>
                     <include>alpha/*.properties</include>
                     <include>prod/*.properties</include>
+                    <include>*.properties</include>
                 </includes>
             </resource>
             <resource>
@@ -51,7 +49,43 @@
                 <directory>src/main/resources/${profiles.active}</directory>
             </resource>
         </resources>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.0</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.1</version>
+                <configuration>
+                    <suiteXmlFiles>
+                        <suiteXmlFile>TestNG.xml</suiteXmlFile>
+                    </suiteXmlFiles>
+                    <argLine>
+                        -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
+                    </argLine>
+                </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.aspectj</groupId>
+                        <artifactId>aspectjweaver</artifactId>
+                        <version>${aspectj.version}</version>
+                    </dependency>
+                </dependencies>
+            </plugin>
+        </plugins>
     </build>
+
+    <properties>
+        <aspectj.version>1.8.10</aspectj.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
 
     <dependencies>
         <dependency>
@@ -75,16 +109,32 @@
             <version>4.4.6</version>
         </dependency>
         <dependency>
-            <groupId>org.apache.http</groupId>
-            <artifactId>httpclient</artifactId>
-            <version>4.2.5</version>
-        </dependency>
-        <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
-            <version>4.0.2</version>
+            <version>4.5.6</version>
+        </dependency>
+        <dependency>
+            <groupId>io.qameta.allure</groupId>
+            <artifactId>allure-testng</artifactId>
+            <version>2.7.0</version>
+        </dependency>
+        <dependency>
+            <groupId>ru.yandex.qatools.allure</groupId>
+            <artifactId>allure-maven-plugin</artifactId>
+            <version>2.6</version>
         </dependency>
     </dependencies>
+
+    <reporting>
+        <excludeDefaults>true</excludeDefaults>
+        <plugins>
+            <plugin>
+                <groupId>io.qameta.allure</groupId>
+                <artifactId>allure-maven</artifactId>
+                <version>2.9</version>
+            </plugin>
+        </plugins>
+    </reporting>
 
 
 </project>
