--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -27,4 +27,4 @@ log4j.appender.ERROR.File = output//logs//error.log
 log4j.appender.ERROR.Append = true
 log4j.appender.ERROR.Threshold = ERROR
 log4j.appender.ERROR.layout = org.apache.log4j.PatternLayout
-log4j.appender.ERROR.layout.ConversionPattern =%-d{yyyy-MM-dd HH:mm:ss} [%5p] %c{1} - %m%n
+log4j.appender.ERROR.layout.ConversionPattern =%-d{yyyy-MM-dd HH:mm:ss} [%5p] %M:%L - %m%n
