--- a/pom.xml
+++ b/pom.xml
@@ -11,15 +11,9 @@
     <!--多环境配置-->
     <profiles>
         <profile>
-            <id>alpha</id>
+            <id>beta</id>
             <properties>
-                <profiles.active>alpha</profiles.active>
-            </properties>
-        </profile>
-        <profile>
-            <id>ar</id>
-            <properties>
-                <profiles.active>ar</profiles.active>
+                <profiles.active>beta</profiles.active>
             </properties>
         </profile>
         <profile>
@@ -39,7 +33,7 @@
                 <directory>src/main/resources</directory>
                 <!-- 第一节点：扫描配置文件 -->
                 <includes>
-                    <include>alpha/*.properties</include>
+                    <include>beta/*.properties</include>
                     <include>prod/*.properties</include>
                     <include>*.properties</include>
                 </includes>
@@ -135,9 +129,9 @@
             <version>3.16</version>
         </dependency>
         <dependency>
-            <groupId>com.google.code.gson</groupId>
-            <artifactId>gson</artifactId>
-            <version>2.8.5</version>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.56</version>
         </dependency>
     </dependencies>
 
