--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,7 +1,7 @@
 ###日志输出编码UTF-8###
 log4j.appender.logfile.encoding=UTF-8
 ### 保存的日志级别 ###
-log4j.rootLogger=INFO,INFO,ERROR,STDOUT
+log4j.rootLogger=INFO,ERROR,STDOUT
 #关闭控制台输出日志信息 恢复时可把此标识加到上面STDOUT
 ### 输出ERROR级别日志到控制台 ###
 log4j.appender.STDOUT=org.apache.log4j.ConsoleAppender
